# m210

./: .bzrignore  .gitignore  .gitmodules  50-m210.rules  CMakeLists.txt  CREDITS  Doxyfile.in  INSTALL  MANIFEST.in  Makefile.am  Makefile.in  NEWS  README  README.in  TODO  configure  configure.ac  devinstall.sh  install.sh  setup.py
cli/: 50-m210.rules  README  README.in
cli/src/: format_tablet_data.c  info.c
cli/src/lib/: __init__.py
daemon/etc/udev/rules.d/: 50-m210-daemon.rules
daemon/src/lib/: __init__.py
debian/: changelog  control  copyright  libm210-dev.install  m210.1  m210.manpages  m210.udev  watch
etc/udev/rules.d/: 50-m210.rules
libm210/: CREDITS  README  TODO  configure.ac  m210.c  m210.h
libm210/doc/: mem.html
libm210/src/: m210.h
libnotetaker/: notetaker.c  notetaker.h  notetaker_internal.h
m210/: README  __init__.py
m210/cli/: setup.py
m210/cli/src/lib/: __init__.py
m210/daemon/: setup.py
m210/daemon/etc/init/: m210-daemon.conf
m210/daemon/etc/udev/rules.d/: 50-m210-daemon.rules
m210/daemon/src/lib/: __init__.py
m210/m210/: setup.py
m210/m210/src/lib/: optparse.py  pegatech.py
m210/qt/src/lib/ui/: mainwindow.py
m210/qt/ui/: mainwindow.ui
m210c/: README  m210-export-notes  m210c  setup.py
m210c-qt/: MANIFEST.in  Makefile  README  setup.py
m210c-qt/share/applications/: m210c-qt.desktop
m210c-qt/src/lib/: dataview.py
m210c-qt/ui/: dataview.ui  mainwindow.ui  noteviewer.qrc  noteviewer.ui
m210d/: MANIFEST.in  README  m210d  setup.py
m210d/etc/dbus-1/system.d/: org.codegrove.m210.daemon.conf
m210d/etc/init/: m210d.conf
m210d/src/lib/: __init__.py
noter/: README
noter/cli/: setup.py
noter/cli/src/lib/: __init__.py
noter/core/: setup.py
noter/core/src/lib/core/: __init__.py
noter/daemon/: setup.py
noter/daemon/etc/dbus-1/system.d/: org.codegrove.noter.daemon.conf
noter/daemon/etc/init/: noter-daemon.conf
noter/daemon/src/lib/: __init__.py  collections.py  pegatech.py
noter/noter/: setup.py
noter/noter/src/lib/: optparse.py  pegatech.py
pylib/: CREDITS
pylib/src/lib/: __init__.py  collections.py  modulehidraw.c  moduleinput.c  optparse.py  pegatech.py
python/: TODO  m210.py  notetakerd  notetakerd.py  peganotes.py  pegatech.py  setup.py
python-m210/: HACKING  MANIFEST.in  README  setup.py
python-m210/doc/: xy.html
python-m210/m210/: __init__.py  modulehidraw.c  pegatech.py
python-m210/src/: collections.py  moduleinput.c  pegatech.py
python-m210/src/lib/: __init__.py  collections.py  pegatech.py
python/etc/dbus-1/system.d/: org.codegrove.noter.conf  org.codegrove.notetaker.conf
python/etc/init/: noter-daemon.conf  noterd.conf  notetakerd.conf
python/etc/udev/rules.d/: 50-m210.rules  50-noter.rules
python/linux/: __init__.py  modulehidraw.c  moduleinput.c
python/noter/: __init__.py
python/notetaker/: __init__.py  cli.py  collections.py  dbus.py  pegatech.py
qt/: setup.py
qt/src/lib/: __init__.py
qt/src/lib/ui/: mainwindow.py
qt/ui/: mainwindow.ui
src/: CMakeLists.txt  Makefile.am  Makefile.in  delete_notes.c  dev.c  dev.h  download_notes.c  erase.c  err.c  err.h  format_mouse_data.c  format_tablet_data.c  get_info.c  get_notes.c  info.c  m210.c  m210.h  mouse_mode.c  note.c  note.h  rawnote.h  tablet_mode.c
src/libm210/: Makefile.am  Makefile.in  dev.c  dev.h  err.c  err.h  note.c  note.h  rawnote.h
