CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(libm210)

SET(CMAKE_MODULE_PATH ${libm210_SOURCE_DIR}/cmake/modules)
ADD_DEFINITIONS(-Wall -Werror -Wextra -pedantic -std=gnu99)

ADD_SUBDIRECTORY(src)

SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "C API for Pegasus Tablet Mobile NoteTaker (M210)")
SET(CPACK_PACKAGE_VENDOR "Tuomas Jorma Juhani R채s채nen")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "1")
SET(CPACK_PACKAGE_VERSION_PATCH "0")
SET(CPACK_PACKAGE_CONTACT "Tuomas Jorma Juhani R채s채nen <tuomasjjrasanen@tjjr.fi>")
INCLUDE(CPack)
