SET(m210_SOURCES dev.c note.c)
SET(m210_HEADERS dev.h note.h rawnote.h)
SET(m210_SOVERSION 1)

ADD_LIBRARY(m210 SHARED ${m210_SOURCES})

# Runs cmake/modules/Findlibudev.cmake
FIND_PACKAGE(libudev REQUIRED)
INCLUDE_DIRECTORIES(${libudev_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(m210 ${libudev_LIBRARIES})

SET_PROPERTY(TARGET m210 PROPERTY PUBLIC_HEADER ${m210_HEADERS})
SET_PROPERTY(TARGET m210 PROPERTY SOVERSION ${m210_SOVERSION})

INSTALL(TARGETS m210 LIBRARY DESTINATION lib PUBLIC_HEADER DESTINATION include/m210)
