AM_CFLAGS = -Wall -Werror
AM_LDFLAGS = -ludev -lm210
bin_PROGRAMS = m210-info m210-delete-notes m210-download-notes m210-mouse-mode m210-tablet-mode
m210_info_SOURCES = info.c
m210_delete_notes_SOURCES = delete_notes.c
m210_download_notes_SOURCES = download_notes.c
m210_mouse_mode_SOURCES = mouse_mode.c
m210_tablet_mode_SOURCES = tablet_mode.c
