AM_CFLAGS = -Wall -Werror
AM_LDFLAGS = -ludev -lm210
bin_PROGRAMS = m210-info m210-erase m210-download m210-mouse m210-tablet m210-format-mouse-data m210-format-tablet-data
m210_info_SOURCES = info.c
m210_erase_SOURCES = erase.c
m210_download_SOURCES = download.c
m210_mouse_SOURCES = mouse.c
m210_tablet_SOURCES = tablet.c
m210_format_mouse_data_SOURCES = format_mouse_data.c
m210_format_tablet_data_SOURCES = format_tablet_data.c
